# tools

./: .editorconfig  .envrc  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  PROBLEM.md  hugo.yaml  pyproject.toml  readme.md  renovate.json5
.github/: copilot-instructions.md
.github/prompts/: img-caption.prompt.md  proofread.prompt.md
.github/skills/new-tool/: SKILL.md
.github/workflows/: ci_pre-commit.yaml  meta_cleanup.yaml  meta_cleanup.yml  meta_zizmor.yaml  pages.yaml
archetypes/tools/: index.md
ci/: build_tools_data.py  convert_page_images.py  detect_tools_changes.py
content/: _index.md  about.md
content/tools/html/: _index.md
content/tools/html/3mf-inspector/: index.md  tool.html
content/tools/html/github-actions-spider/: index.md  tool.html
content/tools/html/hello-world/: index.md  tool.html
content/tools/html/helm-chart-discovery/: index.md  tool.html
content/tools/html/url-inspect-rewrite/: index.md  tool.html
content/tools/python/: _index.md
content/tools/python/hello-python/: index.md  tool.py
data/: tools.yaml
layouts/partials/: tool-link.html
layouts/shortcodes/: py-usage.html  tool-cards.html  tool-image.html  tool-link.html
